# crosspost

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MILESTONES.md  Makefile  PLAN.md  PRD_BACKLOG.md  PROJECT_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SETUP.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 85b6d4dfff8f_initial_schema.py
src/crosspost/: __main__.py  config.py
src/crosspost/adapters/: base.py
src/crosspost/adapters/api/: telegram.py  telegraph.py  vk.py  youtube.py
src/crosspost/adapters/browser/: base_browser.py  dzen.py  instagram.py  vk.py  vk_channel.py  vk_wall.py  whatsapp.py  yandex.py
src/crosspost/channels/: browser_login.py  connection.py  connection_validator.py  telegram_login.py  validators.py
src/crosspost/content/: canonical.py  capabilities.py  validation.py
src/crosspost/db/: engine.py  models.py  profile_repo.py  publication_repo.py  sqlite_store.py  vault.py
src/crosspost/media/: lifecycle.py
src/crosspost/orchestrator/: adapter_factory.py  breaker.py  dispatcher.py  publish_service.py  queue.py  task.py
src/crosspost/scheduler/: deferred.py  pacing.py
src/crosspost/sessions/: health.py  relogin.py  vault.py
src/crosspost/users/: model.py
src/crosspost/web/: app.py  deps.py  media.py  routes.py
src/crosspost/web/frontend/: .gitkeep  index.html
src/crosspost/web/routes/: channels.py  profiles.py  publish.py  tg_login.py
tests/: conftest.py  test_build_adapter.py  test_config.py  test_login_command.py
tests/adapters/api/: test_telegram.py  test_vk.py
tests/adapters/browser/: test_base_browser.py  test_vk_browser.py  test_vk_channel_browser.py  test_vk_wall_browser.py  test_yandex_browser.py
tests/channels/: test_browser_isolation.py  test_browser_login.py  test_connection_validator.py  test_telegram_login.py
tests/content/: test_capabilities.py
tests/db/: test_profile_repo.py  test_publication_repo.py  test_schema.py  test_sqlite_store.py  test_vault.py
tests/orchestrator/: test_adapter_factory.py  test_idempotency_store.py  test_publish_service.py
tests/web/: test_api.py  test_publish_api.py
